feat: upgrade to spring boot 4 (#386)
* chore: upgrade to spring boot 4

* chore: update dependencies to Spring Boot 4.1.1 and fix upgrade regressions in Jackson binding, lazy loading, image size limits and test coverage

* fix tests